# simple_mf_play

./: .gitignore  Cargo.toml  build.rs
cpp/: CMakeLists.txt  common.h  initguid.cpp  mfplay.cpp  mfplay.h  mfplay_create_mfplay.cpp  mfplay_impl.h  mfplay_initialize.cpp  safe_queue.h  window_message_queue.cpp  window_message_queue.h
cpp/apps/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h
cpp/libs/: CMakeLists.txt  async_callback.cpp  async_callback.h  mfplay.cpp  mfplay.h  mfplay_impl.h  mfplay_initialize.cpp  mfplay_lib.h  mfplayer_create_mfplayer.cpp  mfplayer_impl.cpp  mfplayer_impl.h  mfplayer_initialize.cpp  window_message_queue.cpp  window_message_queue.h
cpp/libs/mf/: async_callback.h  mfplayer.h
cpp/libs/mfplayer/: CMakeLists.txt  async_callback.cpp
src/: main.rs  mfplay.rs  mfplayer.rs  player.rs
src/mfplay/: mfplay_sys.rs
