[package]
name = "simple_mf_play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

winit = "0.28.6"

[dependencies.windows]
version = "0.48.0"

features = [
    "Win32_Foundation",
    "Win32_Media",
    "Win32_Media_Multimedia",
    "Win32_Media_MediaFoundation",
    "Win32_UI_Shell_PropertiesSystem",
]



